@@ -1,3 +1,11 @@
+2013-09-18  Simson Garfinkel  <simsong@npsair.local>
+
+	* src/be13_api/feature_recorder.cpp (carve): valid_dosname has to be applied to ext, since ext may come with slashes in it.
+
+2013-09-17  Simson Garfinkel  <simsong@npsair.local>
+
+	* src/scan_bulk.cpp (dfrws2012_bulk_process_dump): removed DFRWS code.
+
 2013-09-16  Simson Garfinkel  <simsong@npsair.local>
 
 	* configure.ac: incremented version to 1.4.1-dev. Enabled LT_INIT support; removed RANLIB support.
